test/Error/Handle/Exception/ExampleException.php
<?php
/**
 * TODO Add @file documentation
 *
 * @author Travis Uribe <travis@tvanc.com>
 */

namespace tvanc\backtrace\Test\Error\Handle\Exception;

/**
 * Class ExampleException
 */
class ExampleException extends \Exception
{
}
